# aug_phoni

./: CMakeLists.txt  README.md  benchmark.sh  run_test
data/: small_patterns.fa
include/common/: common.hpp  subsampling_sa.hpp
include/ms/: CMakeLists.txt  aug_phoni.hpp  lazy_lce.hpp  ms_pointers.hpp  ms_rle_string.hpp  phoni.hpp  thr_lce_ds.hpp  thresholds_ds.hpp
pipeline/: aug
test/src/: CMakeLists.txt  aug_compatibility_driver.cpp  aug_phoni.cpp  aug_phoni_lazy.cpp  build_aug.cpp  phoni.cpp  rle_matching_statistics.cpp  subsampling_sa.cpp
